[package]
name = "quake-log-parser"
version = "0.1.0"
edition = "2021"

[dependencies.indexmap]
version = "^2.0"
features = ["serde"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0"
optional = true

[dependencies.clap]
version = "^4.4"
features = ["derive"]
optional = true

[features]
default = ["script"]
script = ["clap", "serde_json"]
