[package]
name = "quake-log-parser"
version = "0.1.0"
edition = "2021"

[dependencies.anyhow]
version = "^1.0"

[dependencies.indexmap]
version = "^2.0"
features = ["serde"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.log]
version = "^0.4"

[dependencies.serde_json]
version = "^1.0"
optional = true

[dependencies.clap]
version = "^4.4"
features = ["derive"]
optional = true

[dependencies.simplelog]
version = "^0.12"
optional = true

[features]
default = ["script"]
script = ["clap", "serde_json", "simplelog"]
